--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #f6f6f6;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -105,3 +107,510 @@ a:hover {
 #clearBtn {
   cursor: pointer;
 } */
+
+/*---------------- Search Bar -----------------*/
+a {
+  text-decoration: none;
+}
+
+.dataResult {
+  width: 250px;
+  background-color: white;
+  position: absolute;
+  top: 60px;
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.foundUser {
+  display: flex;
+  align-items: center;
+}
+
+.searchData {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1px 10px;
+}
+
+.searchIcon {
+  height: 24px;
+  border-left: 1px solid gray;
+  padding-left: 5px;
+}
+
+.searchInput {
+  border: 1px solid black;
+  border-radius: 2px;
+  margin-left: 0;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+  background-color: white;
+}
+
+.searchInput input {
+  border: none;
+  outline: none;
+}
+
+.searchInput:hover {
+  background-color: alpha(theme, palette, common, white, 0.25);
+}
+
+/*----------------------- Nav bar -----------------------*/
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  min-height: 50px;
+  align-items: center;
+  height: 60px;
+  background-color: white;
+}
+
+.navProfileImgDiv {
+  display: flex;
+  margin-right: 50px;
+  align-items: center;
+}
+
+.navProfileImg {
+  width: 40px;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+
+.profileOptions {
+  width: 150px;
+  background-color: white;
+  position: absolute;
+  top: 60px;
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.profileButtons {
+  background-color: white;
+  border-bottom: 1px solid gray;
+  padding: 5px 0px 5px 0px;
+  color: black;
+}
+
+.displayedUserInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.addRemoveFriendsIcon {
+  height: 24px;
+  margin-left: 20px;
+}
+
+.addImageCard {
+  background-color: white;
+  border-radius: 15px;
+}
+
+#image {
+  display: none;
+}
+
+#image-label {
+  color: gray;
+  margin: 10px;
+}
+
+.addImageButtons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+/*----------------- Feed Page -------------------*/
+
+.feedPage {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.imageDescriptionInput {
+  width: 450px;
+  border: none;
+  background-color: #f6f6f6;
+  color: gray;
+  height: 50px;
+  margin: 10px;
+  border-radius: 25px;
+}
+
+.userAndInput {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid gray;
+  width: 90%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.addImageSubmit {
+  background-color: #00d4ff;
+  color: white;
+  border-radius: 25px;
+  height: 30px;
+  border: none;
+  width: 100px;
+  margin: 10px;
+}
+
+/*--------------------- Edit Profile ---------------------*/
+
+.editProfileInputs {
+  display: flex;
+  flex-direction: column;
+}
+
+.editProfileInputs input {
+  height: 50px;
+  margin-bottom: 20px;
+}
+
+.editProfilePage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100vh;
+  padding-bottom: 30px;
+}
+
+.editProfileForm {
+  width: 50%;
+}
+
+.editProfileSubmit {
+  background-color: #00d4ff;
+  border: none;
+  color: white;
+  width: 100px;
+  height: 40px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.friendsCard {
+  background-color: white;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  text-align: center;
+}
+
+.friendInfo {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.usersPictures {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  background-color: white;
+  border-radius: 15px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0)
+}
+
+.photoContainer {
+  width: 300px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.photoContainer img {
+  width: 300px;
+}
+
+.photoModalContainer {
+
+  background-color: white;
+  z-index: 1;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -100%);
+  display: flex;
+  align-items: center;
+  border: 1px solid gray;
+}
+
+.photoModal {
+  width: 470px;
+  height: 500px;
+  /* border: 1px solid gray; */
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+
+}
+
+.photoModal img {
+  /* position: relative;
+  left: 50%;
+  top: 50%; */
+  /* transform: translate(-50%, -50%); */
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.removePhotoModal{
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  font-size: 24px;
+}
+
+.deletePhoto{
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  color: gray;
+  z-index: 999;
+}
+
+.photoDetails{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 290px;
+  height: 490px;
+  align-items: flex-start;
+  /* margin-left: 20px; */
+  padding: 10px;
+}
+
+.photoModalUserInteraction{
+  display: flex;
+  justify-content: space-evenly;
+  border-top: 1px solid gray;
+  width: 100%
+}
+
+/*----------------------- Feed -----------------------*/
+
+.feedCard {
+  background-color: white;
+  border-radius: 15px;
+  margin-top: 10px;
+  width: 600px;
+}
+
+.feedImageContainer {
+  width: 97%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding-bottom: 40px;
+  border-bottom: 1px solid #e4e2e2;
+}
+
+.feedImageContainer img {
+  max-width: 100%;
+}
+
+.feedInteraction {
+  padding: 10px 0px 10px 0px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.feedContributors {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.albumSelectors{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.albumSelector{
+  padding: 20px 20px 5px 20px;
+}
+
+.albumSelectorActive{
+  padding: 20px 20px 5px 20px;
+  border-bottom: 2px solid blue;
+}
+
+.firstAndLastName{
+  display: flex;
+  justify-content: space-between;
+}
+
+.firstAndLastName input{
+  width: 47%;
+}
+
+.editCoverPhoto{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.editCoverPhoto img{
+  /* width: 80%; */
+  height: 300px;
+}
+
+.caption{
+  display: none;
+  z-index: 999;
+}
+
+.caption:hover{
+  display: inline
+}
+
+.cover-photo-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.cover-label {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  top: -50%
+
+}
+
+.cover-label img:hover{
+  filter: brightness(50%); 
+  cursor: pointer;
+}
+
+.hover-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 14px;
+  opacity: 0; /* Hidden by default */
+  transition: opacity 0.3s;
+  z-index: 999;
+}
+
+.hover-text-avatar {
+  position: absolute;
+  /* top: 50%; */
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 14px;
+  opacity: 0; /* Hidden by default */
+  transition: opacity 0.3s;
+  z-index: 999;
+}
+
+.cover-label:hover .hover-text {
+  opacity: 1; 
+}
+
+.cover-label:hover .hover-text-avatar {
+  opacity: 1;
+}
+
+.likeCount{
+  margin: 2px 0px 0px 0px;
+  color:
+}
+
+.photoModalPage{
+  position: fixed;
+  top: -100%;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4)
+}
+
+.deletePhotoModal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  color: white;
+  background-color: #2d2c2c;
+  padding: 30px;
+  border-radius: 15px;
+}
+
+.deleteImageButton{
+  background-color: red;
+  color: white;
+  border: none;
+  width: 70px;
+  height: 30px;
+}
+
+.cancelDeletePhoto{
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  width: 70px;
+  height: 30px;
+}
+
+.registerContainer{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid gray;
+  padding: 30px;
+  border-radius: 15px; 
+}
+
+.positionCenter{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.aboutMe{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.aboutDescription{
+  color: gray;
+  width: 70%;
+  text-align: justify;
+  margin: 0px;
+}
+
+.errorMessage{
+  
+}
