--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,8 +1,19 @@
-dialog.Signup::backdrop {
+/* dialog.Signup::backdrop {
   backdrop-filter: blur(5px) brightness(50%) sepia(0);
 }
 
 dialog.Signup {
+  border: none;
+  width: 450px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+} */
+
+/* .Signup::backdrop {
+  backdrop-filter: blur(5px) brightness(50%) sepia(0);
+} */
+
+.Signup {
   border: none;
   width: 450px;
   border-radius: 15px;
