--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -1,27 +1,93 @@
-.avatar{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
+.avatar {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.userInfos{
-    text-align: left;
-    list-style: none;
+.editAvatar{
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: relative;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.username{
-    font-size: 18px;
-    font-weight: bold;
+.userInfos {
+  text-align: left;
+  margin-left: 30px;
 }
 
-.role{
-    color:#808080
+.username {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.user{
-    display: flex;
-    justify-content: center;
-    padding-top: 60px;
+.role {
+  color: #808080;
+}
+
+.user {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* padding: 50px; */
+  border-radius: 15px;
+  background-color: white;
+  width: 80%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  /* height: 70vh; */
+  /* gap: 2rem; */
+  /* margin: 30px; */
+}
+
+.userProfile {
+}
+
+.coverPhoto {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.coverPhoto img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.profileDetails {
+  display: flex;
+  z-index: 1;
+  position: relative;
+  bottom: 25px;
+  left: 10%;
+  align-items: flex-end;
+  padding: 2px
+}
+
+.avatarFrame{
+  border: 1px solid gray;
+  background-color: white;
+  height: 180px;
+  width: 180px;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
